--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ section {
     padding: 50px 20px;
 }
 
-.Shivan soni sir img {
+.SHIVAM-SONI-SIR img {
     border-radius: 50%;
     width: 150px;
     height: 150px;
