--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body {
     background-color: #f2f2f2;
     color: #333;
 }
-
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -145,4 +144,7 @@ footer {
     color: #fff;
     text-align: center;
     padding: 20px 0;
+}
+body{
+    background-image: url(w.jpg);
 }
