--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,13 @@ body {
     color: #333;
 }
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+    flex-direction: row;
 }
+    @media(max-width; 600px){
+      .container {
+          flex-direction: column;
+      }
+    }
 
 header, footer {
     background-color: #333;
